--- a/package.json
+++ b/package.json
@@ -48,26 +48,26 @@
   ],
   "dependencies": {
     "aedes": "^0.46.0",
-    "mqtt": "^4.2.6",
+    "mqtt": "^4.2.8",
     "websocket-stream": "^5.5.2"
   },
   "peerDependencies": {
-    "@openhps/core": ">=0.3.0-alpha.59",
+    "@openhps/core": ">=0.3.0-alpha.66",
     "reflect-metadata": ">=0.1.13"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "@openhps/core": "^0.3.0-alpha.59",
-    "@types/chai": "^4.2.18",
-    "@types/mocha": "^8.2.0",
-    "@types/node": "^12.20.13",
-    "@typescript-eslint/eslint-plugin": "^4.24.0",
-    "@typescript-eslint/parser": "^4.24.0",
+    "@openhps/core": "^0.3.0-alpha.66",
+    "@types/chai": "^4.2.20",
+    "@types/mocha": "^8.2.3",
+    "@types/node": "^12.20.16",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
     "chai": "^4.2.0",
-    "eslint": "^7.27.0",
+    "eslint": "^7.30.0",
     "eslint-config-prettier": ">=7.0.0",
-    "eslint-plugin-import": "^2.23.3",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsdoc": "^34.8.2",
     "eslint-plugin-prettier": ">=3.3.0",
     "husky": "^4.3.6",
@@ -75,15 +75,15 @@
     "mocha": "^8.2.1",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
-    "prettier": "^2.3.0",
+    "prettier": "^2.3.2",
     "reflect-metadata": ">=0.1.13",
     "shx": "^0.3.3",
     "standard-version": "^9.1.0",
-    "ts-node": ">=8.10.2",
-    "typedoc": ">=0.20.7",
-    "typescript": ">=4.1.3",
-    "webpack": "^5.37.1",
-    "webpack-cli": "^4.3.0"
+    "ts-node": "^10.0.0",
+    "typedoc": "^0.21.2",
+    "typescript": "^4.3.5",
+    "webpack": "^5.43.0",
+    "webpack-cli": "^4.7.2"
   },
   "nyc": {
     "branches": 0,
