--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
   "dependencies": {
     "aedes": "^0.46.0",
     "mqtt": "^4.2.8",
-    "websocket-stream": "^5.5.2"
+    "websocket-stream": "^5.5.2",
+    "ws": "^5.2.3"
   },
   "peerDependencies": {
     "@openhps/core": ">=0.3.0-alpha.66",
@@ -62,7 +63,7 @@
     "@types/chai": "^4.2.20",
     "@types/mocha": "^8.2.3",
     "@types/node": "^12.20.16",
-    "@types/ws": "^7.4.7",
+    "@types/ws": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "chai": "^4.2.0",
