--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "reflect-metadata": ">=0.1.13",
     "shx": "^0.3.3",
     "standard-version": "^9.1.0",
+    "terser-webpack-plugin": "^5.1.4",
     "ts-node": "^10.0.0",
     "typedoc": "^0.21.2",
     "typescript": "^4.3.5",
