--- a/package.json
+++ b/package.json
@@ -6,36 +6,45 @@
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/OpenHPS/openhps-mqtt.git"
+    "url": "https://github.com/OpenHPS/openhps-rest.git"
   },
+  "bugs": {
+    "url": "https://github.com/OpenHPS/openhps-rest/issues"
+  },
+  "homepage": "https://openhps.org",
   "publishConfig": {
     "access": "public"
   },
+  "sideEffects": false,
   "main": "./dist/cjs/index.js",
-  "types": "./dist/cjs/index.d.ts",
-  "module": "./dist/esm/index.js",
-  "exports": {
-    "require": "./dist/cjs/index.js",
-    "import": "./dist/esm/index.js"
-  },
-  "unpkg": "dist/web/openhps-mqtt.min.js",
-  "jsdelivr": "dist/web/openhps-mqtt.min.js",
+  "types": "./dist/types/index.d.ts",
+  "unpkg": "./dist/web/openhps-mqtt.min.js",
+  "jsdelivr": "./dist/web/openhps-mqtt.min.js",
+  "lsd:module": true,
+  "module": "./dist/esm5/index.js",
+  "es2015": "./dist/esm/index.js",
   "files": [
     "dist/**/*",
-    "src/**/*"
+    "src/**/*",
+    "LICENSE"
   ],
   "scripts": {
     "test": "mocha --config test/.mocharc.json",
     "cover": "nyc mocha --config test/.mocharc.json && nyc report --reporter=cobertura",
     "lint": "eslint src/**",
     "clean": "shx rm -rf ./dist && shx rm -rf ./docs/out",
-    "build": "npm run clean && npm-run-all --parallel build:esm build:cjs build:typedoc && npm run build:webpack",
-    "build:esm": "tsc --module es2015 --outDir dist/esm",
-    "build:cjs": "tsc --module commonjs  --outDir dist/cjs",
-    "build:webpack": "npm-run-all --parallel build:webpack:*",
-    "build:webpack:prod": "webpack --env prod --progress --",
-    "build:webpack:dev": "webpack --env dev --progress --",
+    "build": "npm run clean && npm-run-all --parallel build:ts:* && npm run build:webpack",
+    "build:components": "componentsjs-generator",
+    "build:quick": "npm-run-all --parallel build:ts:* && npm run build:webpack",
     "build:typedoc": "typedoc --options docs/typedoc.json",
+    "build:ts:cjs": "tsc --build ./tsconfig/tsconfig.bundle.cjs.json",
+    "build:ts:esm": "tsc --build ./tsconfig/tsconfig.bundle.esm.json",
+    "build:ts:esm5": "tsc --build ./tsconfig/tsconfig.bundle.esm5.json",
+    "build:ts:types": "tsc --build ./tsconfig/tsconfig.bundle.types.json",
+    "build:webpack": "npm-run-all --parallel build:webpack:*",
+    "build:webpack:prod": "webpack --env prod --",
+    "build:webpack:dev": "webpack --env dev --",
+    "deploy:typedoc": "gh-pages -d ./docs/out",
     "publish:development": "npm run bump:beta && npm publish --tag dev",
     "publish:beta": "npm run bump:beta && npm publish --tag beta",
     "publish:release": "npm run bump:beta && npm publish --tag latest",
@@ -48,47 +57,48 @@
     "mqtt"
   ],
   "dependencies": {
-    "aedes": "^0.46.1",
-    "mqtt": "^4.2.8",
+    "aedes": "^0.46.3",
+    "mqtt": "^4.3.7",
     "websocket-stream": "^5.5.2",
-    "ws": "^5.2.3"
+    "ws": "^8.6.0"
   },
   "peerDependencies": {
-    "@openhps/core": ">=0.3.13",
+    "@openhps/core": ">=0.3.34",
     "reflect-metadata": ">=0.1.13"
   },
   "devDependencies": {
-    "@commitlint/cli": "^13.2.1",
-    "@commitlint/config-conventional": "^13.2.0",
-    "@openhps/core": ">=0.3.13",
-    "@types/chai": "^4.2.22",
-    "@types/mocha": "^9.0.0",
-    "@types/node": "^16.11.1",
-    "@types/ws": "^6.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.1.0",
-    "@typescript-eslint/parser": "^5.1.0",
-    "chai": "^4.3.4",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-deprecation": "^1.2.1",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jsdoc": "^36.1.1",
+    "@commitlint/cli": "^16.2.4",
+    "@commitlint/config-conventional": "^16.2.4",
+    "@openhps/core": ">=0.3.34",
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^17.0.31",
+    "@types/ws": "^8.5.3",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "chai": "^4.3.6",
+    "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-deprecation": "^1.3.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.2.9",
     "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^7.0.2",
-    "mocha": "^9.1.3",
+    "gh-pages": "^3.2.3",
+    "husky": "^7.0.4",
+    "mocha": "^10.0.0",
     "mocha-junit-reporter": "^2.0.2",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
-    "prettier": "^2.4.1",
+    "prettier": "^2.6.2",
     "reflect-metadata": ">=0.1.13",
-    "shx": "^0.3.3",
+    "shx": "^0.3.4",
     "standard-version": "^9.3.2",
-    "terser-webpack-plugin": "^5.2.4",
-    "ts-node": "^10.3.0",
-    "typedoc": "^0.22.6",
-    "typescript": "^4.4.4",
-    "webpack": "^5.59.0",
-    "webpack-cli": "^4.9.1"
+    "terser-webpack-plugin": "^5.3.1",
+    "ts-node": "^10.7.0",
+    "typedoc": "^0.22.15",
+    "typescript": "^4.6.4",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2"
   },
   "nyc": {
     "branches": 0,
