--- a/package.json
+++ b/package.json
@@ -65,13 +65,13 @@
     "ws": "^8.9.0"
   },
   "peerDependencies": {
-    "@openhps/core": ">=0.3.40",
+    "@openhps/core": ">=0.3.45",
     "reflect-metadata": ">=0.1.13"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
-    "@openhps/core": ">=0.3.40",
+    "@openhps/core": "^0.3.46",
     "@types/chai": "^4.3.3",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.7.18",
