--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openhps/mqtt",
-  "version": "0.1.9",
+  "version": "1.0.0",
   "description": "Open Hybrid Positioning System",
   "author": "Maxim Van de Wynckel",
   "license": "Apache-2.0",
@@ -59,46 +59,50 @@
     "mqtt"
   ],
   "dependencies": {
-    "aedes": "0.50.0",
-    "mqtt": "^5.0.3",
-    "protobufjs": "^7.2.5",
-    "ws": "^8.13.0"
+    "aedes": "0.51.3",
+    "mqtt": "^5.10.2",
+    "protobufjs": "^7.4.0",
+    "ws": "^8.18.0"
   },
   "peerDependencies": {
-    "@openhps/core": ">=0.4.48",
-    "reflect-metadata": ">=0.1.13"
+    "@openhps/core": ">=0.7.11",
+    "reflect-metadata": ">=0.2.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.7.1",
-    "@commitlint/config-conventional": "^17.7.0",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "@eslint/compat": "^1.2.3",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.15.0",
     "@openhps/core": "^0.4.48",
-    "@types/chai": "^4.3.5",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^20.5.7",
-    "@types/ws": "^8.5.5",
-    "@typescript-eslint/eslint-plugin": "^6.5.0",
-    "@typescript-eslint/parser": "^6.5.0",
-    "chai": "^4.3.8",
-    "eslint": "^8.48.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-deprecation": "^1.5.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsdoc": "^46.5.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "husky": "^8.0.3",
-    "mocha": "^10.2.0",
+    "@types/chai": "^5.0.1",
+    "@types/mocha": "^10.0.9",
+    "@types/node": "^22.9.0",
+    "@types/ws": "^8.5.13",
+    "@typescript-eslint/eslint-plugin": "^8.14.1-alpha.8",
+    "@typescript-eslint/parser": "^8.14.1-alpha.8",
+    "chai": "^4",
+    "eslint": "^9.15.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-deprecation": "^3.0.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsdoc": "^50.5.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.12.0",
+    "husky": "^9.1.7",
+    "mocha": "^10.8.2",
     "mocha-junit-reporter": "^2.2.1",
     "npm-run-all": "^4.1.5",
-    "nyc": "^15.1.0",
-    "prettier": "^3.0.2",
-    "reflect-metadata": ">=0.1.13",
+    "nyc": "^17.1.0",
+    "prettier": "^3.3.3",
+    "reflect-metadata": ">=0.2.2",
     "shx": "^0.3.4",
     "standard-version": "^9.5.0",
-    "terser-webpack-plugin": "^5.3.9",
-    "ts-node": "^10.9.1",
-    "typedoc": "^0.25.0",
-    "typescript": "^5.2.2",
-    "webpack": "^5.88.2",
+    "terser-webpack-plugin": "^5.3.10",
+    "ts-node": "^10.9.2",
+    "typedoc": "^0.26.11",
+    "typescript": "^5.6.3",
+    "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
   },
   "nyc": {
