--- a/tsconfig/tsconfig.base.json
+++ b/tsconfig/tsconfig.base.json
@@ -8,6 +8,7 @@
         "importHelpers": true,
         "removeComments": false,
         "preserveConstEnums": true,
+        "esModuleInterop": true,
         "skipLibCheck": true,
         "sourceMap": true,
         "declaration": false,
